# ai-character

./: .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
backend/: README.md  config.yaml.example  main.py  pipeline.py  protocol.py  session.py
backend/personas/: haru.yaml
frontend/: README.md  index.html  main.js  pcm-worklet.js  styles.css
frontend/lib/: README.md  untitled-pixi-live2d-engine_index.min.js
frontend/src/: README.md  app.js  audio-capture.js  constants.js  model-config.js  model-controller.js  pixi-compat.js  socket-client.js  tts-playback-queue.js  ui-state.js
scripts/: sync_requirements.sh
tests/: conftest.py  test_pipeline.py  test_session.py
