[project]
name = "ai-character"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "addict==2.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "audioread==3.1.0",
    "babel==2.18.0",
    "blis==1.3.3",
    "catalogue==2.0.10",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "cloudpathlib==0.23.0",
    "confection==1.3.3",
    "cryptography==46.0.6",
    "csvw==3.7.0",
    "cymem==2.0.13",
    "decorator==5.2.1",
    "dlinfo==2.0.0",
    "docopt==0.6.2",
    "en-core-web-sm",
    "espeakng-loader==0.2.4",
    "fastapi==0.135.3",
    "filelock==3.25.2",
    "fsspec==2026.3.0",
    "h11==0.16.0",
    "hf-xet==1.4.3",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.9.0",
    "idna==3.11",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "language-tags==1.2.0",
    "lazy-loader==0.5",
    "librosa==0.11.0",
    "llvmlite==0.47.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mcp==1.27.0",
    "mdurl==0.1.2",
    "miniaudio==1.61",
    "misaki==0.9.4",
    "mlx==0.31.1",
    "mlx-audio==0.4.2",
    "mlx-lm==0.31.1",
    "mlx-metal==0.31.1",
    "mlx-whisper==0.4.3",
    "more-itertools==11.0.1",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "murmurhash==1.0.15",
    "networkx==3.6.1",
    "num2words==0.5.14",
    "numba==0.65.0",
    "numpy==2.4.4",
    "packaging==26.0",
    "phonemizer-fork==3.3.2",
    "platformdirs==4.9.4",
    "pooch==1.9.0",
    "preshed==3.0.13",
    "protobuf==7.34.1",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pygments==2.20.0",
    "pyjwt==2.12.1",
    "pyloudnorm==0.2.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.24",
    "pyyaml==6.0.3",
    "rdflib==7.6.0",
    "referencing==0.37.0",
    "regex==2026.4.4",
    "requests==2.33.1",
    "rfc3986==1.5.0",
    "rich==14.3.3",
    "rpds-py==0.30.0",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "segments==2.4.0",
    "sentencepiece==0.2.1",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.5.1",
    "sounddevice==0.5.3",
    "soundfile==0.13.1",
    "soxr==1.0.0",
    "spacy==3.8.14",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "srsly==2.5.3",
    "sse-starlette==3.3.4",
    "starlette==1.0.0",
    "sympy==1.14.0",
    "termcolor==3.3.0",
    "thinc==8.3.13",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tokenizers==0.22.2",
    "torch==2.11.0",
    "tqdm==4.67.3",
    "transformers==5.5.0",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "uvicorn==0.44.0",
    "uvloop==0.22.1",
    "wasabi==1.1.3",
    "watchfiles==1.1.1",
    "weasel==1.0.0",
    "websockets==16.0",
    "wrapt==2.1.2",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Groups imports: Standard library -> Third party -> Local
combine-as-imports = true
force-single-line = false

[tool.uv]
package = false

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
